<resources>
    <string name="app_name">CourseSelection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginHint">Enter a username</string>
    <string name="passwordHint">Enter a password</string>
    <string name="loginBtnTxt">Login</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="phoneHint">Phone Number</string>
    <string name="dob">Date of Birth</string>

    <string-array name="Months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="txtDay">Day</string>
    <string name="txtYear">Year</string>
    <string name="cert">Certificate</string>
    <string name="twoYr">Associates Degree</string>
    <string name="txtMajor">Major</string>
    <string name="txtNext">Next</string>

    <string-array name="lstCert">
        <item>Android Certificate</item>
        <item>iOS Mobile Certificate</item>
    </string-array>

    <string-array name="lstMajor">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>

    <string name="errMessageLogin">Invalid Login. Please enter the valid credentials.</string>
    <string name="errMessagePassword">Invalid Password. Please enter the valid credentials.</string>

    <string name="btnNext">Next</string>

    <string name="sectionClass">Select your class and time slot:</string>
    <string name="class1">MAD-107: iOS I</string>
    <string name="class2">MAD-155: Android II</string>
    <string name="class3">MAD-157: iOS II</string>
    <string name="class4">MAD-257: Capstone Mobile Class</string>

    <string name="timeRB1">T/TH 12:00 PM - 1:50 PM</string>
    <string name="timeRB2">M/W 10:00 AM - 11:50 AM</string>
    <string name="timeRB3">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRB4">T/Th 4:00 PM - 5:50 PM</string>
    <string name="timeRB5">F 9:00 AM - 12:50 PM</string>
    <string name="timeRB6">M/W 12:00 PM - 1:50 PM</string>

    <string name="sumName">Student:</string>
    <string name="sumPhone">Phone:</string>
    <string name="sumBirth">Birthdate:</string>
    <string name="sumDegree">Degree Plan:</string>
    <string name="sumMajor">Major:</string>
    <string name="sumNext">Next Semester:</string>
</resources>